<resources>
    <string name="conversations_strings_general_settings_tab_title_txt">General</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="sim_1_title">SIM1</string>
    <string name="sim_2_title">SIM2</string>
    <string name="usb_storage">USB storage</string>
    <string name="usb_storage_eject">Unmount USB storage</string>
    <string name="usb_storage_eject_summary">Unmount USB storage so you can safely remove it</string>
    <string name="usb_storage_mount">Mount USB storage</string>
    <string name="usb_storage_mount_summary">Mount the USB storage</string>
    <string name="usb_storage_insert_summary">Connect a USB storage for mounting</string>
    <string name="usb_storage_format">Clear USB storage</string>
    <string name="usb_storage_format_summary">"Clear all data on the device's USB storage, such as music and photos."</string>
    <string name="usb_storage_unavailable">Unavailable</string>
    <string name="usb_storage_format_title">Clear USB storage</string>
    <string name="usb_storage_format_desc">This action will erase the USB storage. You will lose <b>all</b> data saved there!</string>
    <string name="usb_storage_format_button_text">Clear USB storage</string>
    <string name="usb_storage_format_final_desc">Clear USB storage and delete all files saved in it? Action cannot be reversed!</string>
    <string name="usb_storage_format_final_button_text">Delete everything</string>
    <string name="usb_storage_dlg_confirm_unmount_title">Unmount USB storage</string>
    <string name="usb_storage_dlg_confirm_unmount_text">After you unmount the USB storage, some applications you are using will close and may be unavailable until you remount the USB storage.</string>
    <string name="usb_storage_dlg_error_unmount_title">Could not unmount USB storage</string>
    <string name="usb_storage_dlg_error_unmount_text">Could not unmount USB storage. Try again later.</string>
    <string name="usb_storage_unmount_inform_text">USB storage will be unmounted</string>
    <string name="phone_memory">Device memory</string>
    <string name="erase_emmc_storage">Clear internal storage</string>
    <string name="erase_emmc_storage_desc">"Clear all data on device's internal storage, such as music and photos."</string>
    <string name="emmc_memory">Internal storage</string>
    <string name="emmc_format">Clear internal storage</string>
    <string name="emmc_format_desc">"Format (clear) device's internal storage"</string>
    <string name="emmc_mount">Mount internal storage</string>
    <string name="emmc_mount_summary">Mount the internal storage</string>
    <string name="emmc_erase">Clear internal storage</string>
    <string name="emmc_erase_description">This action will clear internal storage. You will lose all data on it.</string>
    <string name="emmc_erase_button">Clear internal storage</string>
    <string name="emmc_erase_everything_desc">Clear all files saved in it? Action cannot be reversed!</string>
    <string name="usb_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the connected external USB storage.</string>
    <string name="emmc_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the internal storage</string>
    <string name="config_defaultLocale" />
    <string name="power_settings_title">Power management</string>
    <string name="dialog_title_battery_threshold">Battery level</string>
    <string name="dialog_percentage_counter">%d%%</string>
    <string name="power_saving_modes">Power saving modes</string>
    <string name="title_activation">Activation</string>
    <string name="title_hint">How to use STAMINA</string>
    <string name="description_hint">Tap here to show info screen</string>
    <string name="dismiss_hint">OK</string>
    <string name="dialog_title_hint">How to use STAMINA</string>
    <string name="dialog_message_hint"><u>What is STAMINA mode?</u>"
STAMINA mode is a Sony™ power save function. It extends battery lifetime by disabling functionality while the screen is off.

"<u>Basic usage</u>"
To activate STAMINA mode, use the switch on the next screen.
When the screen is off, all network data will be disabled temporarily, and most of your applications will be inactive, to save battery.
When the screen is on, your device will function normally.

"<u>Advanced usage</u>"
If you want to keep some apps active when the screen is off, just add them to the APPS ACTIVE IN STANDBY list.

"<u>Note</u>"
Some applications may not work properly when disabled in standby. If an application does not work properly, add it to the APPS ACTIVE IN STANDBY list, or if this does not work, deactivate STAMINA mode."</string>
    <string name="whitelist_header_label">Apps active in standby</string>
    <string name="whitelist_tab_apps_and_widgets">Apps</string>
    <string name="whitelist_tab_others">All others</string>
    <string name="add_application">Add applications</string>
    <string name="extended_standby_mode_label">STAMINA mode</string>
    <string name="description_always_on">Always on</string>
    <string name="description_battery_threshold">When battery level is below %d%%</string>
    <string name="extended_standby_mode_descr">Disables background data when screen is off</string>
    <string name="remaining_standby_time">Estimated standby time</string>
    <string name="remaining_battery_time">Estimated battery time</string>
    <string name="remaining_time_in_standby">(%s in Standby mode)</string>
    <string name="tip">Tip!</string>
    <string name="tip_text">Activate the power saving tools below to extend battery lifetime</string>
    <string name="power_information">Power information</string>
    <string name="location_based_wi_fi_label">Location-based Wi-Fi</string>
    <string name="location_based_wi_fi_descr">Wi-Fi activated automatically when in range of a saved Wi-Fi network</string>
    <string name="power_save_mode_label">Low battery mode</string>
    <string name="power_save_mode_descr">Disables functions in order to save power when battery level is low</string>
    <string name="statusbar_information_label">Status bar information</string>
    <string name="statusbar_information_descr">Battery level percentage</string>
    <string name="powersaver_header_label">Low battery mode settings</string>
    <string name="cancel_txt">Cancel</string>
    <string name="done_txt">Done</string>
    <string name="dialog_title_select_apps_to_whitelist">Add applications</string>
    <string name="powersaver_feature_brightness">Screen brightness</string>
    <string name="powersaver_feature_brightness_dialog">Adapt to device settings</string>
    <string name="powersaver_feature_sleep">Screen timeout</string>
    <string name="powersaver_feature_wifi">Wi-Fi off</string>
    <string name="powersaver_feature_haptic">Vibrate on touch off</string>
    <string name="powersaver_feature_bt">Bluetooth off</string>
    <string name="powersaver_feature_gps">GPS off</string>
    <string name="powersaver_feature_sync">Auto-sync off</string>
    <string name="powersaver_feature_data">Mobile data off</string>
    <string name="powersaver_feature_gamma">Night mode on</string>
    <string name="powersaver_feature_bravia">Mobile BRAVIA Engine 2 off</string>
    <string name="powersaver_feature_xreality">X-Reality off</string>
    <string name="powersaver_feature_xloud">xLOUD™ off</string>
    <string name="powersaver_feature_stamina">STAMINA mode on</string>
    <string name="string_timeout_entries_dont_change_txt">Adapt to device settings</string>
    <string name="string_timeout_entries_15_seconds_txt">15 seconds</string>
    <string name="string_timeout_entries_30_seconds_txt">30 seconds</string>
    <string name="string_timeout_entries_1_minute_txt">1 minute</string>
    <string name="string_timeout_entries_2_minutes_txt">2 minutes</string>
    <string name="string_timeout_entries_5_minutes_txt">5 minutes</string>
    <string name="string_timeout_entries_10_minutes_txt">10 minutes</string>
    <string name="string_timeout_entries_30_minutes_txt">30 minutes</string>
    <string name="remaining_runtime_time">Estimated battery time</string>
    <string name="small_remaining_standby_time">In standby:</string>
    <string name="dual_tether_apn_dialog_title">Select an APN</string>
    <string name="dual_tether_apn_enterprise">Orange Internet Enterprise</string>
    <string name="dual_tether_apn_consumer">Orange Internet</string>
    <string name="tethering_confirmation_checkbox">"Don't show this again"</string>
    <string name="sms_counter_popup_start_date_title_text">Count cycle reset date</string>
    <string name="sms_counter_application_name_text">SMS counter</string>
    <string name="sms_counter_widget_total_txt">SMS sent</string>
    <string name="sms_counter_widget_warning_exceed_txt">Warning level exceeded</string>
    <string name="sms_counter_widget_maximum_txt">Max. limit</string>
    <string name="sms_counter_list_message_warning_level_text">Warning level</string>
    <string name="sms_counter_list_message_maximum_text">Maximum limitation</string>
    <string name="sms_counter_list_count_cycle_text">Cycle mode</string>
    <string name="sms_counter_list_start_date_text">Counting period</string>
    <string name="sim1_title">SIM1</string>
    <string name="sim2_title">SIM2</string>
    <string name="sim_enable">Enable/Disable SIM cards</string>
    <string name="general_settings">SIM card for data traffic</string>
    <string name="proxy_action_text">Done</string>
    <string name="cancel">Cancel</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="dsds_strings_naming_sim2_first_line_txt">SIM2 name</string>
    <string name="dsds_settings_dual_sim_card_sim_name_list_subtitle_txt">Tap to name %1$s</string>
    <string name="dsds_settings_dual_sim_card_sim1_name_remind_string_popup_txt">12 characters limited</string>
    <string name="dsds_settings_dual_sim_card_naming_sim_subtitle_txt">NAMING SIM CARD</string>
    <string name="dsds_strings_naming_sim1_first_line_txt">SIM1 name</string>
    <string name="dual_sim_divider_other_settings">Other settings</string>
    <string name="call_forward_title">Mutual call forwarding</string>
    <string name="call_forward_description">Forward calls to the other SIM card when one SIM card is unreachable</string>
    <string name="call_forward_sim1_number">Input SIM1 number</string>
    <string name="call_forward_sim1_number_desc">Forward call to SIM1 when SIM2 is unreachable.</string>
    <string name="call_forward_sim2_number">Input SIM2 number</string>
    <string name="call_forward_sim2_number_desc">Forward calls to SIM2 when SIM1 is unreachable</string>
    <string name="glove_mode_checkbox_title">Glove mode</string>
    <string name="glove_mode_checkbox_summary">Allows interaction with touchscreen when wearing gloves</string>
    <string name="theme_label">Themes</string>
    <string name="theme_summary">Change theme and wallpaper</string>
    <string name="theme_dialog_title_select_theme_txt">Select theme</string>
    <string name="swiqi_strings_swiqi2_txt">Mobile BRAVIA Engine 2</string>
    <string name="swiqi_strings_swiqi3_txt">X-Reality for mobile</string>
    <string name="swiqi_strings_swiqi_desc_txt">Image quality enhancer for photos and videos</string>
    <string name="light_effects_settings_title">Light effects</string>
</resources>