<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root_view" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/plate_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/total_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/sms_counter_widget_total_txt" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/total_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:id="@id/warning_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/sms_counter_widget_warning_exceed_txt" />
        <LinearLayout android:orientation="horizontal" android:id="@id/maximum_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/sms_counter_widget_maximum_txt" />
            <TextView android:textSize="14.0sp" android:id="@id/maximum_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="0.0dip" android:text="@string/sms_counter_application_name_text" android:layout_alignParentLeft="true" android:textAllCaps="true" />
</RelativeLayout>