<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root_view" android:background="@drawable/plate_bg" android:padding="0.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/sms_counter_sim_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="-7.0dip" android:src="@drawable/sim1_icn" />
        <TextView android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginTop="-7.0dip" android:text="@string/sms_counter_application_name_text" android:textAllCaps="true" style="@style/SmsCounterWidgetTitle" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:padding="-5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/total_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-5.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="-5.0dip" android:text="@string/sms_counter_widget_total_txt" style="@style/SmsCounterWidgetContext" />
            <TextView android:textSize="24.0dip" android:id="@id/total_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="-5.0dip" />
        </LinearLayout>
        <TextView android:id="@id/warning_text" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="-6.0dip" android:text="@string/sms_counter_widget_warning_exceed_txt" style="@style/SmsCounterWidgetContext" />
        <LinearLayout android:orientation="horizontal" android:id="@id/maximum_line" android:padding="-6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/sms_counter_widget_maximum_txt" style="@style/SmsCounterWidgetContext" />
            <TextView android:id="@id/maximum_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" style="@style/SmsCounterWidgetContext" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>